@@ -400,7 +400,7 @@ closefn.gds(f)
 
 
 
-# Session Info
+# Session Information
 
 ```{r}
 sessionInfo()
